--- a/Dina/app/src/main/AndroidManifest.xml
+++ b/Dina/app/src/main/AndroidManifest.xml
@@ -15,9 +15,20 @@
         android:theme="@style/Theme.Dina"
         tools:targetApi="31">
         <activity
-<<<<<<< HEAD
+            android:name=".Creditos"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Actividad5"
-=======
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Actividad4"
             android:exported="false">
             <meta-data
@@ -26,7 +37,6 @@
         </activity>
         <activity
             android:name=".ExplicacionAct4"
->>>>>>> master
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
