Fuera barra de arriba

--- a/Dina/app/src/main/AndroidManifest.xml
+++ b/Dina/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Dina"
+        android:theme="@style/Theme.Dina.Main"
         tools:targetApi="31">
         <activity
             android:name=".Dialogo_explicacion_act7"
@@ -84,7 +84,7 @@
         <activity
             android:name=".mapa"
             android:exported="false"
-            android:theme="@style/Theme.Dina.Main">>
+            android:theme="@style/Theme.Dina.Main">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -126,14 +126,16 @@
         </activity>
         <activity
             android:name=".Creditos"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.Dina.Main">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".Actividad5"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.Dina.Main">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
